--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     </header>
 
     <main>
-        <h1 id="ipData">Carregando...</h1>
-        <h1 id="userDevice">Carregando...</h1>
+        <div id="weather-info"></div>
     </main>
 
     <footer>
@@ -20,7 +19,10 @@
     </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
-<script src="routes/addressIp.js"></script>
-<script src="routes/userDevice.js"></script>
+<script src="scripts/addressIp.js"></script>
+<script src="scripts/userDevice.js"></script>
+<script src="scripts/addressUser.js"></script>
+<script src="scripts/weather.js"></script>
+<script src="scripts/getWatherDescription.js"></script>
 </body>
 </html>
